# Finanzmaschine

./: .gitignore  LICENSE.md  README.md  input_eth.py  lot.py  mode.py  pyproject.toml  quote.py  settings.yaml  tranche.py
core/: asset.py  asset_lot.py  etp_lot.py  etp_lots.py  instruments.py  lot.py  mode.py  quote.py  share_lot.py  share_lots.py  tranche.py
core/machine/: context.py
core/market/: __init__.py  etps.py  exchange.py  instruments.py
core/positions/: __init__.py  base_lot.py  share_lot.py
data/: quote.csv  quote_crypto_eur.csv  quote_etp_eur.csv
data/eth/: quotes.csv
etp/: gb00bld4zm24.py
py/finanzmaschine-core/: pyproject.toml  settings.yaml
py/finanzmaschine-core/src/finanzmaschine_core/: config.py
py/finanzmaschine-core/tests/: conftest.py
py/finanzmaschine-core/tests/data_driven_tests/: conftest.py  test_single_positions.py
py/finanzmaschine-core/tests/integration_tests/: conftest.py  test_positions.py
py/finanzmaschine-core/tests/tests_on_data/: conftest.py  test_positions.py  test_single_positions.py
src/finanzmaschine/: __init__.py  config.py  sandbox.py  sandbox2.py  sandbox3.py
src/finanzmaschine/accounting/fifo/: analytics.py  demo.py  sandbox.py
src/finanzmaschine/catalog/: __init__.py  asset_enum.py  asset_loader.py  asset_registry.py  exchange_enum.py  instrument_registry.py  security_registry.py
src/finanzmaschine/catalog/assets/: asset_loader.py  bootstrap.py
src/finanzmaschine/catalog/base_assets/: bootstrap.py
src/finanzmaschine/catalog/crypto_etp/: __init__.py  eth_etp.py
src/finanzmaschine/catalog/cryptos/: bootstrap.py
src/finanzmaschine/catalog/currencies/: bootstrap.py
src/finanzmaschine/catalog/data/: crypto_etps.yaml  cryptos.yaml  currencies.yaml
src/finanzmaschine/catalog/etps/: bootstrap.py  etp_loader.py
src/finanzmaschine/catalog/shares/: __init__.py  bootstrap.py  ethereum.py  loader.py  toncoin.py
src/finanzmaschine/core/assets/: __init__.py  asset.py  base_asset.py  etp.py  security.py
src/finanzmaschine/core/lot_positions/: base_lot_position.py  fifo_lot_position.py
src/finanzmaschine/core/lot_records/: base_lot_record.py  etp_lot_record.py  secure_lot_record.py
src/finanzmaschine/utils/: decimal_helper.py  float_helper.py  path_helper.py
tests/data/etps/: ton_etp_fifo.csv  ton_etp_fifo_lifo.csv  ton_etp_flow.csv  toncoin.csv  toncoin_fifo_closing.csv
tests/integration_tests/: conftest.py  test_positions.py
tests/smoke_tests/: test_ton_etp.py
(+190 files in other folders)
